--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: checkout repo
+        uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
       - name: Convential changelog action
         id: release
-        uses: actions@create-release@v1
+        uses: actions/create-release@v1
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
